src/chrome/userChrome.css
@import "variables.css";

/*********************
    THEME OVERRIDE
**********************/

:root {
    --tab-selected-bgcolor: var(--tab-background) !important;
    --tab-hover-background-color: var(--tab-background) !important;

    --toolbar-bgcolor: var(--sidebar-background) !important;
    --toolbox-bgcolor: var(--sidebar-background) !important;
    --toolbox-bgcolor-inactive: var(--sidebar-background) !important;
    --toolbar-field-background-color: var(--tab-background) !important;
    --toolbar-field-focus-background-color: var(--sidebar-background) !important;

    --panel-border-color: var(--border-color) !important;
    --panel-separator-color: var(--border-color) !important;
    --panel-item-hover-bgcolor: var(--tab-background) !important;

    --urlbarView-hover-background: var(--tab-background) !important;
    --urlbarView-highlight-background: var(--tab-background) !important;

    --toolbarbutton-hover-background: var(--tab-background) !important;
    --tabpanel-background-color: var(--secondary-background) !important;
    --sidebar-background-color: var(--secondary-background) !important;
}

menupopup, panel {
    --panel-background: var(--sidebar-background) !important;
}

#urlbar, #urlbar-background, #TabsToolbar .tab-background,
toolbarbutton, toolbaritem, button, richlistitem {
    overflow: hidden !important;
    box-shadow: none !important;
    border-radius: 6px !important;
}


/*********************
     TOOLBOX STYLE
**********************/

.titlebar-spacer,
.titlebar-buttonbox-container,
#nav-bar-overflow-button,
#urlbar-go-button,
#customization-panel-container,
#identity-icon-label,
#urlbar-container #star-button-box,
#urlbar-container #page-action-buttons > * {
    display: none !important;
}

#navigator-toolbox {
    height: 100% !important;
    width: var(--sidebar-width) !important;
}

#navigator-toolbox, #nav-bar {
    border: none !important;
}

#nav-bar {
    padding: var(--gap-size) !important;

    #nav-bar-customization-target {
        flex-wrap: wrap !important;
        row-gap: var(--gap-size) !important;

        > *:first-child, toolbarbutton {
            padding: 0 !important;
        }
    }

    #PanelUI-menu-button {
        right: -2px !important;
        position: absolute !important;
    }
}

@media (-moz-bool-pref: "custom.sidebar.bottom-extensions") {
    #unified-extensions-button {
        z-index: 100 !important;
        position: fixed !important;
        left: var(--gap-size) !important;
        bottom: var(--gap-size) !important;
    }

    #TabsToolbar #TabsToolbar-customization-target > *:nth-child(2) {
        margin-inline: 34px 0 !important;
    }
}

/*********************
  CLOSED URLBAR STYLE
**********************/

#urlbar-container {
    margin: 0px !important;
    height: 32px !important;
    width: calc(var(--sidebar-width) - 2*var(--gap-size)) !important;

    #urlbar:hover
    #page-action-buttons
        > *:not([hidden="true"]):not(#star-button-box) {
        display: flex !important;
    }

    .urlbar-page-action,
    #urlbar[unifiedsearchbutton-available=""] #identity-box {
        width: fit-content !important;
    }

    #urlbar[unifiedsearchbutton-available=""] #identity-box {
        margin-left: 6px !important;
        margin-right: 6px !important;

        #identity-icon-box {
            padding: 0 !important;
        }
    }

    #tracking-protection-icon-container:not([hidden]),
    .verifiedDomain[pageproxystate="valid"] #identity-icon-box,
    .verifiedDomain[pageproxystate="valid"] #identity-permission-box,
    #urlbar[pageproxystate="valid"] .chromeUI #identity-icon-box,
    .urlbar-page-action {
        margin: 3px !important;
        padding: 3px !important;
        height: fit-content !important;
    }

    #identity-box.verifiedDomain #identity-icon-box {
        margin: 3px 0 !important;
    }

    #urlbar[pageproxystate="valid"] .chromeUI {
        margin-right: 0px !important;

        #identity-icon-box {
            border-radius: 50% !important;
        }
    }
}

/*********************
 FLOATING URLBAR STYLE
**********************/

#urlbar-container:has(#urlbar[breakout-extend="true"]) {
    #urlbar, .urlbarView, #urlbar-results {
        margin: 0 !important;
        padding: 0 !important;
    }

    * {
        border: none !important;
    }

    #urlbar {
        position: fixed !important;
        width: var(--floating-urlbar-width) !important;
        top: var(--urlbar-top-position) !important;
        left: calc(
            50vw - var(--floating-urlbar-width)/2 + var(--sidebar-width)/2
        ) !important;
        border-radius: var(--gap-radius) !important;
        border: 1px var(--border-color) solid !important;
    }

    .urlbar-input-box {
        margin-left: 6px !important;
    }

    .urlbarView {
        gap: 4px !important;
        width: 100% !important;
        padding: 4px 6px !important;
        border-top: 1px var(--border-color) solid !important;
    }

    .urlbarView-row:not(:last-child) {
        margin-bottom: 4px !important;
    }

    #identity-box, .urlbarView-row[label], .search-one-offs {
        display: none !important;
    }
}

/*********************
  VERTICAL TABS STYLE
**********************/

#TabsToolbar {
    --tab-min-height: 32px !important;

    order: 99 !important;
    position: relative !important;
    margin: 0 0 0 var(--gap-size) !important;

    #TabsToolbar-customization-target {
        height: 100% !important;
        flex-wrap: wrap !important;

        #tabbrowser-tabs {
            flex: unset !important;
            height: calc(100% - 32px - 2*var(--gap-size)) !important;
            width: calc(var(--sidebar-width) - 2*var(--gap-size)) !important;
        }
    }

    .tabbrowser-tab, .tab-background {
        padding: 0 !important;
        margin: 0 !important;
    }

    .tabbrowser-tab {
        max-height: var(--tab-min-height) !important;
    }

    .tab-stack {
        margin-bottom: var(--gap-size) !important;
    }

    .toolbarbutton-1, .unified-extensions-item {
        padding: 0px !important;
        height: fit-content !important;
    }

    #TabsToolbar-customization-target > *:last-child {
        margin-right: var(--gap-size) !important;
    }
}

#navigator-toolbox[movingtab] {
    #tabbrowser-tabs {
        margin-bottom: 0 !important;
        padding-bottom: 0 !important;
    }

    .tabbrowser-tab[style*='transform: translateX(188px);'] {
        transform: translate(0, calc(32px + var(--gap-size))) !important;
    }

    .tabbrowser-tab[style*='transform: translateX(-188px);'] {
        transform: translate(0, calc(-32px - var(--gap-size))) !important;
    }
}

scrollbox[part="scrollbox"][orient="horizontal"][smoothscroll="true"] > * {
    gap: 4px !important;
    overflow: hidden scroll;
    flex-direction: column !important;
}

/*********************
     PANEL TWEAKS
**********************/

panel {
    .panel-subview-body {
        padding: 0px !important;
    }

    panelview {
        padding: 4px 0 !important;
    }

    toolbarbutton, toolbaritem, button, richlistitem {
        margin: 0 4px !important;
    }

    toolbarseparator {
        margin: 4px 0px !important;
    }
}

#unified-extensions-view,
#downloadsPanel-multiView {
    width: var(--menu-panel-width) !important;
}

#unified-extensions-view {
    .panel-header, .panel-header + toolbarseparator {
        display: none !important;
    }

    toolbaritem {
        margin: 0 !important;
    }

    .unified-extensions-item-row-wrapper {
        position: relative !important;
    }

    .unified-extensions-item-message-deck {
        width: 230px !important;
    }

    .unified-extensions-item-menu-button {
        position: absolute !important;
        right: 6px !important;
        top: 50% !important;
        transform: translateY(-50%) !important;
    }
}

#downloadsPanel-mainView {
    richlistitem, #downloadsHistory {
        width: calc(var(--menu-panel-width) - 8px) !important;
    }
}

/*********************
  CONTEXT MENU STYLE
**********************/

.menupopup-arrowscrollbox {
    padding: 4px 0px !important;
}

menupopup {
    margin: 0px !important;

    menuitem, menu {
        margin: 0 4px !important;
    }
}

/*********************
      GAPS STYLE
**********************/

@media (-moz-bool-pref: "custom.sidebar.gaps") {
    #tabbrowser-tabbox, #sidebar-box {
        overflow: hidden !important;
        border-radius: var(--gap-radius) !important;
    }

    #browser {
        left: var(--sidebar-width) !important;
        width: calc(100% - var(--sidebar-width)) !important;

        box-sizing: border-box !important;
        border: var(--sidebar-background) var(--gap-size) solid !important;
    }
}

@media not (-moz-bool-pref: "custom.sidebar.compact") {
    #browser {
        border-left: none !important;
    }
}

/*********************
     BROWSER STYLE
**********************/

#browser, #customization-container {
    height: 100% !important;
    position: absolute !important;
    left: var(--sidebar-width) !important;
    width: calc(100% - var(--sidebar-width)) !important;
}

#customization-container {
    background-color: var(--secondary-background) !important;
}

#sidebar-header, findbar, #sidebar-splitter {
    border: none !important;
}

#customization-container,
#wrapper-urlbar-container,
#nav-bar[customizing] #urlbar-container,
#sidebar-header #sidebar-switcher-target {
    position: absolute !important;
}

#sidebar-header {
    position: relative !important;

    #sidebar-switcher-target {
        top: 6px !important;
        left: 8px !important;
    }
}

#nav-bar[customizing] {
    #urlbar-container {
        left: 0px !important;
        top: 34px !important;
    }

    toolbarpaletteitem:first-child toolbaritem {
        padding: 0 !important;;
    }
}

#TabsToolbar[customizing] {
    margin-top: 38px !important;
}

/*********************
 COMPACT TOOLBOX STYLE
**********************/

@media (-moz-bool-pref: "custom.sidebar.compact") {
    #navigator-toolbox {
        z-index: 99 !important;
        height: 75vh !important;
        margin-top: 13vh !important;

        transition: left 0.15s ease !important;
        left: calc(-1 * var(--sidebar-width) - var(--compact-margin)) !important;

        margin-left: var(--compact-margin) !important;
        border-radius: 6px !important;
        border: 1px var(--border-color) solid !important;

        &:hover,
        &:has(#urlbar[focused=""]) {
            left: 0px !important;
        }

        &::before,
        &::after {
            content: "";
            height: 100%;
            position: absolute;
        }

        &::before {
            width: calc(2 * var(--sidebar-width));
            left: calc(-2 * var(--sidebar-width));
        }

        &::after {
            width: var(--compact-detection-width);
            left: calc(var(--sidebar-width) - 1px);
        }

        #nav-bar #urlbar-container, #TabsToolbar, #TabsToolbar-customization-target {
            width: calc(var(--sidebar-width) - 2 * 7px) !important;
        }
    }

    #browser, #customization-container {
        width: 100% !important;
    }

    :not(:has(#customization-container[hidden])) #navigator-toolbox, #browser, #customization-container {
        left: 0px !important;
    }

    #customization-palette {
        margin-top: 20vh !important;
        margin-left: var(--sidebar-width) !important;
    }

    @media (-moz-bool-pref: "custom.sidebar.bottom-extensions") {
        #navigator-toolbox:hover #unified-extensions-button {
            left: calc(var(--gap-size) + var(--compact-margin) + 1px) !important;
        }

        #unified-extensions-button {
            height: fit-content !important;
            transition: left 0.15s ease !important;
            top: calc(88vh - 32px - var(--gap-size) - 1px) !important;
            left: calc(-1 * var(--sidebar-width) - var(--compact-margin)) !important;
        }
    }
}

